<resources>
    <string name="app_name">上云</string>
    <string name="app_wakaka">哇咔咔</string>
    <string name="deviceManager_name">设备管理</string>
    <string name="cycle_date">数据周期</string>
    <string name="start_date">开始日期</string>
    <string name="end_date">截止日期</string>
    <string name="workfix_name">工装管理</string>
    <string name="label_productInfo">成品信息</string>
    <string name="login_button_label">登录</string>
    <string name="upload_button_label">上传</string>
    <string name="action_logOut">切换账号</string>
    <string name="login_switchOn">自动登录</string>
    <string name="login_switchOff">手动登录</string>
    <string name="chart_scrollOn">自动滚动</string>
    <string name="chart_scrollOff">手动滚动</string>
    <string name="has_switchOn">√</string>
    <string name="has_switchOff">×</string>
    <string name="login_operatorId_hint">用户名</string>
    <string name="login_password_hint">密码</string>
    <string name="label_spotCheck">点检</string>
    <string name="label_maintain">保养</string>
    <string name="label_repair">维修</string>
    <string name="stop_Duration_label">停机时长(小时):</string>
    <string name="repair_Duration_label">维修时长(小时):</string>
    <string name="label_Remark">备注</string>
    <string name="checkSwitch_label">检查结果:</string>
    <string name="hint_remark">撰写备注</string>
    <string name="action_switch">重选场景</string>
    <string name="chat_msg">聊天界面></string>
    <string name="transfer">转发</string>
    <string name="update_config">正在更新配置信息..</string>
    <string name="action_switchScene">切换场景</string>
    <string name="login_preference_label">使用此账号登录</string>
    <string name="switchLogin__button_label">切换账号</string>
    <string name="qualityTest">车间物料品质异常</string>
    <string name="materialUpdate">物料信息设定</string>
    <string name="badLogCode">输入异常代码</string>
    <string name="loading">Loading</string>
    <string name="action_resetConfig">更新配置</string>
    <string name="action_viewReport">查看报表</string>
    <string name="label_tips">显示所选周期的异常情况</string>
    <string name="label_productVerify">成品校验</string>
    <string name="label_productRelease">释放生产单号</string>
    <string name="hint_productNo">输入生产单号(单号找不到可更新列表重试)</string>
    <string name="hint_scan_mainBarCode">扫描成品条码</string>
    <string name="hint_scan_batteryBarCode">扫描1号电池条码</string>
    <string name="hint_scan_batteryBarCode2">扫描2号电池条码</string>
    <string name="hint_scan_barCode">扫描物料条码</string>
    <string name="action_release">释放单号</string>
    <string name="action_updateProductNo">更新单号列表</string>
    <string name="device_info">设备信息</string>
    <string name="device_label">设备名称: </string>
    <string name="fixturename_label">工装名称: </string>
    <string name="device_model">设备型号: </string>
    <string name="hint_deviceLabel">示例: 流水线</string>
    <string name="hint_deviceModel">示例: ZP-1</string>
    <string name="settingPlace_label">使用部门: </string>
    <string name="planState_label">计划状态: </string>
    <string name="label_zhusu_Description">注塑车间机修开机检查清单</string>
    <string name="maintain_Duration">保养用时</string>
    <string name="hint_barCode">扫描条码</string>
    <string name="hint_empty"></string>
    <string name="hint_input">请填写相应内容</string>
    <string name="hint_record">请填写记录</string>
    <string name="own_spotCheck">我的报修申请</string>
    <string name="own_repairLog">我的维修记录</string>
    <string name="label_repairNote">维修记录</string>
    <string name="own_dataSync">数据同步</string>
    <string name="hint_repairNote">请填写维修记录</string>
    <string name="submit_button_label">提交数据</string>
    <string name="maintain_button_label">上传保养记录</string>
    <string name="spotcheck_button_label">上传点检记录</string>
    <string name="check_button_label">审核</string>
    <string name="action_complete">完成</string>
    <string name="repair_switchOn">设备状态: 正常</string>
    <string name="repair_switchOff">设备状态: 异常</string>
    <string name="onloading_prompt">正在获取数据...</string>
    <string name="offline_prompt">无法连接到服务器,下拉重试</string>
    <string name="empty_data_prompt">无符合条件的数据,下拉刷新</string>
    <string name="label_maintainPlan">保养计划</string>
    <string name="label_inspectPlan">点检计划</string>
    <string name="item_maintain">保养项目</string>
    <string name="item_spotcheck">点检项目</string>
    <string name="item_repair">维修项目</string>
    <string name="spare_parts">备件耗材</string>
    <string name="spare_code">备件代码</string>
    <string name="label_entityName">项目名称</string>
    <string name="label_entityAsk">具体要求</string>
    <string name="levelDefault_maintain">保养级别</string>
    <string name="label_plan">计划</string>
    <string name="empty_loading">正在获取数据...</string>
    <string name="action_filter">筛选</string>
    <string name="hint_evaluate">填写对本次维修的评价或建议</string>
    <string name="label_orderState">单据状态: </string>
    <string name="evaluate_label">维修验收</string>
    <string name="label_entityRemark">项目备注</string>
    <string name="label_actualUse">实际用量</string>
    <string name="label_spareRemark">备件备注</string>
    <string name="label_measureUnit">实际计量单位</string>
    <string name="label_repairOrder">维修工单</string>
    <string name="maintainEnd_Label">保养结束日期</string>
    <string name="maintainBegin_Label">保养开始日期</string>
    <string name="planEnd_Label">计划结束日期</string>
    <string name="planBegin_Label">计划开始日期</string>
    <string name="spotcheckEnd_Label">点检结束日期</string>
    <string name="spotcheckBegin_Label">点检开始日期</string>
    <string name="inspect_record">点检记录*</string>
    <string name="maintain_record">保养记录*</string>
    <string name="label_applyRepair">故障报修</string>
    <string name="btnlabel_applyRepair">生成维修工单并审核</string>
    <string name="repairContent">维修内容</string>
    <string name="hint_repairContent">填写维修内容</string>
    <string name="repairRequire">维修要求</string>
    <string name="hint_repairRequire">填写维修要求</string>
    <string name="default_duration">0.0</string>
    <string name="repair_check">维修验收</string>
    <string name="stop_Duration_plan">计划停机工时</string>
    <string name="repair_Duration_plan">计划维修工时</string>
    <string name="planRepairFee_label">计划维修费用</string>
    <string name="repairFee_label">维修费用</string>
    <string name="interval_label">定时同步间隔</string>
    <string name="makeSure_label">确定</string>
    <string name="hint_scan_colorBox">扫描彩箱条码</string>
    <string name="hint_scan_outBox">扫描外箱条码</string>
    <string name="label_jyProductVerify">九阳成品校验</string>
    <string name="nav_header_title">富佳实业有限公司</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_subtitle">Android Studio</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="label_exploratorName">靠模名称</string>
    <string name="label_qtyofline">单线配置数量</string>
    <string name="label_assemblyModule">组件模块</string>
    <string name="label_usage">用途</string>
    <string name="label_manufacturer">使用部门</string>
    <string name="label_fixtureType">工装类别</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_own">我的</string>
    <string name="title_qc">质量检验</string>
    <string name="text_ipqc">来料检验</string>
    <string name="text_qcboard">派单看板</string>
    <string name="text_sopOnline">在线指导书</string>
    <string name="hint_noReason">请输入不良原因</string>
    <string name="power_lineVerify">电源线检验</string>
    <string name="label_powerLine">电源线信息</string>
    <string name="label_productNo">生产单号信息</string>
    <string name="action_reset">重置视图</string>
    <string name="btn_confirm">确认</string>
    <string name="btn_positive">确定</string>
    <string name="btn_negative">取消</string>
    <string name="btn_intoDepot">外购入库</string>
    <string name="scan_prompt">先扫描物料条码</string>
    <string name="scan_withAction">扫描物料条码,点我见看板</string>
    <string name="zero_data_prompt">0.00</string>
    <string name="got_data_prompt">Get质检方案,点我开始检验</string>
    <string name="itemvalue_label1">检验值1</string>
    <string name="itemvalue_label2">检验值2</string>
    <string name="itemvalue_label3">检验值3</string>
    <string name="itemvalue_label4">检验值4</string>
    <string name="itemvalue_label5">检验值5</string>
    <string name="itemvalue_label6">检验值6</string>
    <string name="action_fresh">更新不良清单</string>
    <string name="project_detail_label">检验项目记录</string>
    <string name="newpower_lineVerify">新电源线检验</string>
    <string name="label_vertifyRes">检验结果: 合格</string>
    <string name="waitforJudgeProduct">待判品</string>
    <string name="label_materialModel">规格</string>
    <string name="label_materialName">名称</string>
    <string name="label_operatorID">员工号</string>
    <string name="label_lineNumber">线别</string>
    <string name="label_productModel">产品型号</string>
    <string name="label_note">备注</string>
    <string name="label_date">日期</string>
    <string name="label_timePeroid">时段</string>
    <string name="action_resetView">重置页面</string>
    <string name="action_hide">隐藏</string>
    <string name="label_workplace">机台号</string>
    <string name="badItemNum_label">异常数</string>
    <string name="label_remark">备注</string>
    <string name="label_dimensionLog">尺寸测量记录</string>
    <string name="label_tourInspection">注塑巡检</string>
    <string name="label_moldCavity">模穴</string>
    <string name="label_actualCycle">实际周期</string>
    <string name="label_standardCycle">标准周期</string>
    <string name="label_class">班别</string>
    <string name="label_jiaClass">甲班</string>
    <string name="label_yiClass">乙班</string>
    <string name="date_picker_view_year">年</string>
    <string name="date_picker_view_month">月</string>
    <string name="date_picker_view_day">日</string>
    <string name="label_cancel">取消</string>
    <string name="label_confirm">确定</string>
    <string name="selectPeriod">选择时段</string>
    <string name="label_preassembly">试组装</string>
    <string name="label_shockTest">冲击测试</string>
    <string name="label_nozzleRatio">水口比例</string>
    <string name="label_sampleSize">抽样数: </string>
    <string name="label_numberOfDefective">不良数: </string>
    <string name="label_percentageOfDefective">不良率: </string>
    <string name="label_ok">OK</string>
    <string name="label_ng">NG</string>
    <string name="label_totalProduction">生产总数</string>
    <string name="label_finalJudgment">最终判定</string>
    <string name="label_apperanceQC">外观检验</string>
    <string name="hint_moldCavity">例:  1*3</string>
    <string name="hint_standardCycle">标准周期(可不填)</string>
    <string name="hint_actualCycle">请输入实际周期</string>
    <string name="promot_apperanceQC">显示记录板</string>
    <string name="hint_totalProduction">请输入生产总数</string>
    <string name="hint_nozzleRatio">请输入水口比例</string>
    <string name="hint_sampleSize">请输入抽样数量</string>
    <string name="label_reasonOfDefective">造成不良原因</string>
    <string name="pleaseSelect">请选择</string>
    <string name="label_accept">接受</string>
    <string name="no_close">未停机</string>
    <string name="promot_preassembly">该时段有做试组装</string>
    <string name="label_Judgment">判定:</string>
    <string name="promot_shockTest">需要做冲击测试</string>
    <string name="label_produceNo">单号</string>
    <string name="produceNo_hint">请输入生产单号</string>
    <string name="label_solution">解决方法</string>
    <string name="label_dimenLog">尺寸检验</string>
    <string name="label_traceResult">结果追踪</string>
    <string name="label_upperLimit">上限 </string>
    <string name="label_lowerLimit">下限 </string>
    <string name="hint_standardDimen">请输入规格 </string>
    <string name="hint_upperOffset">上公差 </string>
    <string name="hint_lowerOffset">下公差 </string>
    <string name="label_useGuage">试检具</string>
    <string name="promot_useGuage">无测量值检具试验</string>
    <string name="label_newDimen">添加新的尺寸</string>
    <string name="zeroPercent">0%</string>
    <string name="hint_moldNo">请输入模号</string>
    <string name="label_moldNo">模号</string>
</resources>