<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.furja.overall.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_qc"
        android:name="com.furja.overall.ui.qc.QualityControlFragment"
        android:label="@string/title_qc"
        tools:layout="@layout/fragment_qc" />

    <fragment
        android:id="@+id/navigation_own"
        android:name="com.furja.overall.ui.own.OwnFragment"
        android:label="@string/title_own"
        tools:layout="@layout/fragment_own" />
</navigation>