<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/label_fixtureName"
        android:text="@string/fixturename_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/text_fixtureName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/label_fixtureName"
        />
    <TextView
        android:id="@+id/label_fixtureNumber"
        android:text="@string/fixturename_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/label_fixtureName"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/text_fixtureNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/label_fixtureNumber"
        />
    <TextView
        android:id="@+id/label_exploratorName"
        android:text="@string/label_exploratorName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/label_fixtureNumber"
        />
    <TextView
        android:id="@+id/text_exploratorName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/label_exploratorName"/>
    <TextView
        android:id="@+id/label_qtyofline"
        android:text="@string/label_qtyofline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/label_exploratorName"/>
    <TextView
        android:id="@+id/text_qtyofline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/label_qtyofline"/>
    <TextView
        android:id="@+id/label_assemblyModule"
        android:text="@string/label_assemblyModule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/label_qtyofline"/>
    <TextView
        android:id="@+id/text_assemblyModule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/label_assemblyModule"/>
    <TextView
        android:id="@+id/label_fixtureType"
        android:text="@string/label_fixtureType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/label_assemblyModule"/>
    <TextView
        android:id="@+id/text_fixtureType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/label_fixtureType"/>
    <TextView
        android:id="@+id/label_usage"
        android:text="@string/label_usage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/label_fixtureType"/>
    <TextView
        android:id="@+id/text_usage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/label_usage"/>
    <TextView
        android:id="@+id/label_manufacturer"
        android:text="@string/label_manufacturer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/label_usage"/>
    <TextView
        android:id="@+id/text_manufacturer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/label_manufacturer"/>

</androidx.constraintlayout.widget.ConstraintLayout>