<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <TextView
        android:id="@+id/text_inspectPlan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_inspectPlan"
        android:drawableLeft="@mipmap/ic_spot_left"
        android:paddingLeft="@dimen/evevation"
        android:layout_marginTop="@dimen/input_vertical_margin"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/OwnTextViewStyle"
        />
    <TextView
        android:id="@+id/text_manatainPlan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_maintainPlan"
        android:drawableLeft="@mipmap/ic_maintain_plan"
        android:paddingLeft="@dimen/evevation"
        style="@style/OwnTextViewStyle"
        app:layout_constraintTop_toBottomOf="@+id/text_inspectPlan"
        />

    <TextView
        android:id="@+id/text_ownDataSync"
        android:text="@string/own_dataSync"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@mipmap/ic_sync_left"
        style="@style/OwnTextViewStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_manatainPlan"
        />
    <TextView
        android:id="@+id/text_intervalMinute"
        android:text="@string/interval_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@mipmap/ic_alarm_left"
        style="@style/OwnTextViewStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_ownDataSync"
        />
</androidx.constraintlayout.widget.ConstraintLayout>