<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/deviceName_label"
        android:text="@string/device_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/dp_36"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <EditText
        android:id="@+id/deviceName_edit"
        android:hint="@string/hint_deviceLabel"
        android:layout_width="@dimen/input_solid_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:background="@drawable/shape_device_question"
        app:layout_constraintStart_toEndOf="@+id/deviceName_label"
        app:layout_constraintTop_toTopOf="@+id/deviceName_label"
        app:layout_constraintBottom_toBottomOf="@+id/deviceName_label"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/deviceModel_label"
        android:text="@string/device_model"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        app:layout_constraintTop_toBottomOf="@+id/deviceName_label"
        android:layout_marginTop="@dimen/dp_36"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        app:layout_constraintStart_toStartOf="parent"
        />

    <EditText
        android:id="@+id/deviceNumber_edit"
        android:layout_width="@dimen/input_solid_width"
        android:layout_height="wrap_content"
        android:hint="@string/hint_deviceModel"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:background="@drawable/shape_device_question"
        app:layout_constraintTop_toTopOf="@+id/deviceModel_label"
        app:layout_constraintBottom_toBottomOf="@+id/deviceModel_label"
        app:layout_constraintStart_toEndOf="@+id/deviceModel_label"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <LinearLayout
        android:id="@+id/linear_dept"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_36"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/deviceModel_label"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settingPlace_label"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_weight="3"
            />

        <TextView
            android:id="@+id/deptName_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/hint_empty"
            android:drawableRight="@mipmap/ic_more_right"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:layout_weight="1"
            android:gravity="end"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_planState"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_36"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/linear_dept"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/planState_label"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_weight="3"
            />

        <TextView
            android:id="@+id/planState_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/hint_empty"
            android:drawableRight="@mipmap/ic_more_right"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:layout_weight="1"
            android:gravity="end"
            />
    </LinearLayout>

    <Button
        android:id="@+id/btn_makeSure"
        android:text="@string/makeSure_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/login_horizontal_margin"
        android:layout_marginEnd="@dimen/login_horizontal_margin"
        android:layout_marginTop="@dimen/dp_36"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:background="@drawable/shape_button_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_planState"
        />
</androidx.constraintlayout.widget.ConstraintLayout>