<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_marginStart="@dimen/activity_horizontal_margin"
    android:layout_marginEnd="@dimen/activity_horizontal_margin"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/Black"
    app:cardCornerRadius="16dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/check_Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="false"
            android:drawableLeft="@mipmap/ic_title_left"
            app:layout_constraintTop_toTopOf="parent"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
        <TextView
            android:id="@+id/switch_Label"
            android:text="@string/checkSwitch_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBasic"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_marginTop="@dimen/dp_36"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            app:layout_constraintTop_toBottomOf="@+id/check_Title"
            app:layout_constraintStart_toStartOf="@+id/check_Title"
            />
        <com.kyleduo.switchbutton.SwitchButton
            android:id="@+id/check_has_Switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_36"
            android:drawablePadding="@dimen/login_horizontal_pading"
            android:layout_marginLeft="@dimen/login_horizontal_margin"
            app:layout_constraintTop_toTopOf="@+id/switch_Label"
            app:layout_constraintLeft_toRightOf="@+id/switch_Label"
            app:kswTextOn="@string/has_switchOn"
            app:kswTextOff="@string/has_switchOff"
            app:kswTextExtra="@dimen/textExtra_margin"
            app:kswTintColor="@color/color_AccentBtn"
            />
        <TextView
            android:id="@+id/label_remark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableRight="@mipmap/ic_remark"
            android:text="@string/label_Remark"
            android:layout_marginTop="@dimen/dp_36"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintTop_toBottomOf="@+id/switch_Label"
            app:layout_constraintRight_toRightOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>